micro-frontends/k8s/landing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing
spec:
  selector:
    matchLabels:
      app: landing
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
        - name: landing
          image: gcr.io/micro-frontends/landing
          ports:
            - containerPort: 3000
