micro-frontends/k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: gcr.io/micro-frontends/product
          ports:
            - containerPort: 80
