micro-frontends/k8s/search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
spec:
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
        - name: search
          image: gcr.io/micro-frontends/search
          ports:
            - containerPort: 80
