micro-frontends/k8s/landing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing
spec:
  ports:
    - port: 3000
  type: LoadBalancer
  selector:
    app: landing
