micro-frontends/k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  ports:
    - port: 3000
      targetPort: 80
  type: LoadBalancer
  selector:
    app: product
