micro-frontends/k8s/search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search
spec:
  ports:
    - port: 3200
      targetPort: 80
  type: LoadBalancer
  selector:
    app: search
